# supporting-crud-python-example

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  requirements_test.txt
envfiles/: .envfile.example
src/: config.py
src/business_logic/dto/: attendance.py
src/business_logic/services/: attendance_data_create_service.py  attendance_report_load_service.py
src/data_access/cache/redis/: cache_client.py
src/data_access/persistence/postgresql/: database_client.py  tables.py
src/data_access/persistence/postgresql/migrations/: env.py
src/data_access/persistence/postgresql/migrations/versions/: 17cd333b7bbc_initial.py
src/di/: container.py  factories.py
src/presentation/api/: asgi.py  controllers.py
src/presentation/consumer/: consumer.py  event_emitter.py
tests/: conftest.py
tests/test_e2e/: test_attendance_creation.py  test_attendance_report.py
tests/test_integration/: test_cache_client.py  test_database_client.py
