[tool.poetry]
name = "supporting"
version = "0.1.0"
description = "The purpose of this repository is to show the way of implementing supporting enterprise applications in the Python programming language"
authors = ["Murad Akhundov <akhundov1murad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "1.4.41"
greenlet = "1.1.3"
redis = "4.3.4"
rodi = "1.1.3"
blacksheep = "1.2.7"
pydantic = "1.10.2"
xlsxwriter = "3.0.3"
asyncpg = "0.26.0"
alembic = "1.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
pytest-asyncio = "0.19.0"
openpyxl = "3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
